--- a/test/index.html
+++ b/test/index.html
@@ -55,48 +55,48 @@
 <div id="container">
 
 
-	<div class="test" id="id1">
+	<div class="test" id="id1" style="cursor: pointer;">
 		All styles without title
 	</div>
 	<script type="text/javascript">
-		$('id1').addTip('Slick', { style: 'slick', tipJoint: [ 'left', 'middle' ], target: true });
-		$('id1').addTip('Rounded', { style: 'rounded', tipJoint: [ 'left', 'top' ], target: true });
-		$('id1').addTip('Standard', { style: 'standard', tipJoint: [ 'center', 'top' ], target: true });
-		$('id1').addTip('Glass blabla and more', { style: 'glass', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 30 ] });
+		$('id1').addTip('Slick', { showOn: 'click', style: 'slick', tipJoint: [ 'left', 'middle' ], target: true });
+		$('id1').addTip('Rounded', { showOn: 'click', style: 'rounded', tipJoint: [ 'left', 'top' ], target: true });
+		$('id1').addTip('Standard', { showOn: 'click', style: 'standard', tipJoint: [ 'center', 'top' ], target: true });
+		$('id1').addTip('Glass blabla and more', { showOn: 'click', style: 'glass', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 30 ] });
 	</script>
 	<br />
 
-	<div class="test" id="id2">
+	<div class="test" id="id2" style="cursor: pointer;">
 		All styles with title
 	</div>
 	<script type="text/javascript">
-		$('id2').addTip('Slick', 'Title', { style: 'slick', tipJoint: [ 'left', 'middle' ], target: true });
-		$('id2').addTip('Rounded', 'Title', { style: 'rounded', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 10 ] });
-		$('id2').addTip('Standard', 'Title', { style: 'standard', tipJoint: [ 'center', 'top' ], target: true });
-		$('id2').addTip('Glass blabla and more', 'Some title', { style: 'glass', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 50 ] });
+		$('id2').addTip('Slick', 'Title', { showOn: 'click', style: 'slick', tipJoint: [ 'left', 'middle' ], target: true });
+		$('id2').addTip('Rounded', 'Title', { showOn: 'click', style: 'rounded', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 10 ] });
+		$('id2').addTip('Standard', 'Title', { showOn: 'click', style: 'standard', tipJoint: [ 'center', 'top' ], target: true });
+		$('id2').addTip('Glass blabla and more', 'Some title', { showOn: 'click', style: 'glass', tipJoint: [ 'left', 'top' ], target: true, offset: [ 0, 50 ] });
 	</script>
 
 	<br />
 
-	<div class="test" id="id3">
+	<div class="test" id="id3" style="cursor: pointer;">
 		All styles without title and close button
 	</div>
 	<script type="text/javascript">
-		$('id3').addTip('Slick', { style: 'slick', tipJoint: [ 'left', 'middle' ], hideTrigger: 'closeButton', target: true });
-		$('id3').addTip('Rounded', { style: 'rounded', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true });
-		$('id3').addTip('Standard', { style: 'standard', tipJoint: [ 'center', 'top' ], hideTrigger: 'closeButton', target: true });
-		$('id3').addTip('Glass blabla and more', { style: 'glass', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 30 ] });
+		$('id3').addTip('Slick', { showOn: 'click', style: 'slick', tipJoint: [ 'left', 'middle' ], hideTrigger: 'closeButton', target: true });
+		$('id3').addTip('Rounded', { showOn: 'click', style: 'rounded', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true });
+		$('id3').addTip('Standard', { showOn: 'click', style: 'standard', tipJoint: [ 'center', 'top' ], hideTrigger: 'closeButton', target: true });
+		$('id3').addTip('Glass blabla and more', { showOn: 'click', style: 'glass', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 30 ] });
 	</script>
 	<br />
 
-	<div class="test" id="id4">
+	<div class="test" id="id4" style="cursor: pointer;">
 		All styles with title and close button
 	</div>
 	<script type="text/javascript">
-		$('id4').addTip('Slick', 'Title', { style: 'slick', tipJoint: [ 'left', 'middle' ], hideTrigger: 'closeButton', target: true });
-		$('id4').addTip('Rounded', 'Title', { style: 'rounded', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 10 ] });
-		$('id4').addTip('Standard', 'Title', { style: 'standard', tipJoint: [ 'center', 'top' ], hideTrigger: 'closeButton', target: true });
-		$('id4').addTip('Glass blabla and more', 'Some title', { style: 'glass', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 50 ] });
+		$('id4').addTip('Slick', 'Title', { showOn: 'click', style: 'slick', tipJoint: [ 'left', 'middle' ], hideTrigger: 'closeButton', target: true });
+		$('id4').addTip('Rounded', 'Title', { showOn: 'click', style: 'rounded', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 10 ] });
+		$('id4').addTip('Standard', 'Title', { showOn: 'click', style: 'standard', tipJoint: [ 'center', 'top' ], hideTrigger: 'closeButton', target: true });
+		$('id4').addTip('Glass blabla and more', 'Some title', { showOn: 'click', style: 'glass', tipJoint: [ 'left', 'top' ], hideTrigger: 'closeButton', target: true, offset: [ 0, 50 ] });
 	</script>
 
 	<br />
@@ -318,6 +318,15 @@
 		Testing that 'hideTrigger' set to tip, works.
 		
 		<button onclick="javascript:Tips.add(this, event, 'This tooltip should disappear when mouseOut the tip.', { target: true, hideTrigger: 'tip', hideOn: 'mouseout' });">Click me!</button>
+
+	</div>
+
+	<br />
+
+	<div class="test">
+		Testing that the same event that shows can hide.
+		
+		<button onclick="javascript:Tips.add(this, event, 'This tooltip should disappear when you click again', { target: true, hideOn: 'click' });">Click me!</button>
 
 	</div>
 
