--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 			width: 980px;
 			border: 1px solid silver;
 			margin: 10px auto;
+            margin-bottom: 100px;
 		}
 		.test {
 			border: 1px solid silver;
@@ -38,8 +39,8 @@
 
 	<script type="text/javascript" src="../opentip.js"></script>
 	<script type="text/javascript">
-//        Opentip.useCss3Transitions = false;
-//        Opentip.useScriptaculousTransitions = true;
+        Opentip.useCss3Transitions = false;
+        Opentip.useScriptaculousTransitions = true;
 		Opentip.debugging = true;
 // 		Opentip.defaultStyle = 'rounded';
 		Opentip.styles.codeSample = {
@@ -404,14 +405,25 @@
     <br />
     
 	<div class="test">
-      <a href="javascript:undefined;" id="testGrowShrink">Grow / Shrink</a>
-      <a href="javascript:undefined;" id="testBlind">Blind down / up</a>
-      <a href="javascript:undefined;" id="testPuff">Puff</a>
+      <a href="javascript:undefined;" id="testAppearFade">Appear / Fade</a><br />
+      <a href="javascript:undefined;" id="testGrowShrink">Grow / Shrink</a><br />
+      <a href="javascript:undefined;" id="testBlind">Blind down / up</a><br />
+      <a href="javascript:undefined;" id="testCondensePuff">Puff</a><br />
+      <a href="javascript:undefined;" id="testGrowPuff">Grow / Puff</a><br />
+      <a href="javascript:undefined;" id="testCondenseFade">Condense / Fade</a><br />
+      <a href="javascript:undefined;" id="testRotate">Rotate</a><br />
 	</div>
     <script type="text/javascript">
-      $('testGrowShrink').addTip('Test', { showEffect: 'grow', hideEffect: 'shrink' })
-      $('testBlind').addTip('Test', { showEffect: 'blindDown', hideEffect: 'blindUp' })
-      $('testPuff').addTip('Test', { showEffect: 'condense',  hideEffect: 'puff' })
+      Opentip.styles.effects = {
+        showEffectDuration: 0.8, hideEffectDuration: 0.8, stem: true
+      };
+      $('testAppearFade').addTip('Test', { showEffect: 'appear', hideEffect: 'fade', style: 'effects' })
+      $('testGrowShrink').addTip('Test', { showEffect: 'grow', hideEffect: 'shrink', style: 'effects' })
+      $('testBlind').addTip('Test', { showEffect: 'blindDown', hideEffect: 'blindUp', style: 'effects' })
+      $('testCondensePuff').addTip('Test', { showEffect: 'condense',  hideEffect: 'puff', style: 'effects' })
+      $('testGrowPuff').addTip('Test', { showEffect: 'grow',  hideEffect: 'puff', style: 'effects' })
+      $('testCondenseFade').addTip('Test', { showEffect: 'condense',  hideEffect: 'fade', style: 'effects' })
+      $('testRotate').addTip('Test', { showEffect: 'rotate',  hideEffect: 'rotate', style: 'effects' })
     </script>
 
     
