Added all the CSS3 animation markup for FF

--- a/test/index.html
+++ b/test/index.html
@@ -39,8 +39,8 @@
 
 	<script type="text/javascript" src="../opentip.js"></script>
 	<script type="text/javascript">
-        Opentip.useCss3Transitions = false;
-        Opentip.useScriptaculousTransitions = true;
+//        Opentip.useCss3Transitions = false;
+//        Opentip.useScriptaculousTransitions = true;
 		Opentip.debugging = true;
 // 		Opentip.defaultStyle = 'rounded';
 		Opentip.styles.codeSample = {
@@ -423,7 +423,7 @@
       $('testCondensePuff').addTip('Test', { showEffect: 'condense',  hideEffect: 'puff', style: 'effects' })
       $('testGrowPuff').addTip('Test', { showEffect: 'grow',  hideEffect: 'puff', style: 'effects' })
       $('testCondenseFade').addTip('Test', { showEffect: 'condense',  hideEffect: 'fade', style: 'effects' })
-      $('testRotate').addTip('Test', { showEffect: 'rotate',  hideEffect: 'rotate', style: 'effects' })
+      $('testRotate').addTip('Test', { showEffect: 'rotate',  hideEffect: 'rotate', style: 'effects', showOn: 'click', hideOn: 'click' })
     </script>
 
     
