Added the CSS3 animations for opera

--- a/test/index.html
+++ b/test/index.html
@@ -408,7 +408,7 @@
       <a href="javascript:undefined;" id="testAppearFade">Appear / Fade</a><br />
       <a href="javascript:undefined;" id="testGrowShrink">Grow / Shrink</a><br />
       <a href="javascript:undefined;" id="testBlind">Blind down / up</a><br />
-      <a href="javascript:undefined;" id="testCondensePuff">Puff</a><br />
+      <a href="javascript:undefined;" id="testCondensePuff">Condense / Puff</a><br />
       <a href="javascript:undefined;" id="testGrowPuff">Grow / Puff</a><br />
       <a href="javascript:undefined;" id="testCondenseFade">Condense / Fade</a><br />
       <a href="javascript:undefined;" id="testRotate">Rotate</a><br />
@@ -420,7 +420,7 @@
       $('testAppearFade').addTip('Test', { showEffect: 'appear', hideEffect: 'fade', style: 'effects' })
       $('testGrowShrink').addTip('Test', { showEffect: 'grow', hideEffect: 'shrink', style: 'effects' })
       $('testBlind').addTip('Test', { showEffect: 'blindDown', hideEffect: 'blindUp', style: 'effects' })
-      $('testCondensePuff').addTip('Test', { showEffect: 'condense',  hideEffect: 'puff', style: 'effects' })
+      $('testCondensePuff').addTip('Test', { showEffect: 'condense',  hideEffect: 'puff', style: 'effects', showOn: 'click', hideOn: 'click' })
       $('testGrowPuff').addTip('Test', { showEffect: 'grow',  hideEffect: 'puff', style: 'effects' })
       $('testCondenseFade').addTip('Test', { showEffect: 'condense',  hideEffect: 'fade', style: 'effects' })
       $('testRotate').addTip('Test', { showEffect: 'rotate',  hideEffect: 'rotate', style: 'effects', showOn: 'click', hideOn: 'click' })
