--- a/test/index.html
+++ b/test/index.html
@@ -142,6 +142,14 @@
 	</script>
 	<br />
 
+	<div class="test" id="testE2">
+		Bad Ajax. Click the text to close it.
+	</div>
+	<script type="text/javascript">
+		$('testE2').addTip({ title: 'Ajax test', hideTrigger: null, targetJoint: [ 'right', 'middle'], target: true, tipJoint: ['left', 'bottom'], stem: ['left','bottom'], ajax: { url: 'ajaxtest_nonexisting.html' } });
+	</script>
+	<br />
+
 	<div class="test" id="testF">
 		Tooltip setup by external javascript
 	</div>
@@ -230,7 +238,7 @@
 		Testing the $(element).addTip() function;
 	</div>
 	<script type="text/javascript">
-		$('testI').addTip('test');
+		$('testI').addTip('Hi, this is a very good test! Really impressive.');
 	</script>
 
 
