Adding tips with inline html tags is now possible.

--- a/test/index.html
+++ b/test/index.html
@@ -435,6 +435,14 @@
     </script>
 
     
+	<br />
+	<div class="test">
+      <div ot="Hi" ot-delay="0.99" ot-style="glass">Testing the inline HTML options.</div>
+      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'right', 'middle' ]">Testing the inline HTML options.</a>
+      <div ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
+	</div>
+    
+
 	<div id="helper" style="background: rgba(255, 0, 0, 0.2);position: absolute;"></div>
 
 
