--- a/test/index.html
+++ b/test/index.html
@@ -437,8 +437,9 @@
     
 	<br />
 	<div class="test">
-      <div ot="Hi" ot-delay="0.99" ot-style="glass">Testing the inline HTML options.</div>
-      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'right', 'middle' ]">Testing the inline HTML options.</a>
+      <div ot="Hi this is a very simple tooltip.">Just defining ot.</div>
+      <div ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
+      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'right', 'middle' ]">Testing AJAX</a>
       <div ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
 	</div>
     
