Upgraded to prototype 1.7.0.0

--- a/test/index.html
+++ b/test/index.html
@@ -34,8 +34,8 @@
 		
 	</style>
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js"></script>
 
 	<script type="text/javascript" src="../opentip.js"></script>
 	<script type="text/javascript">
@@ -439,7 +439,7 @@
 	<div class="test">
       <div ot="Hi this is a very simple tooltip.">Just defining ot.</div>
       <div ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
-      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'right', 'middle' ]">Testing AJAX</a>
+      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
       <div ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
 	</div>
     
