--- a/test/index.html
+++ b/test/index.html
@@ -57,7 +57,6 @@
 
 <div id="container">
 
-
 	<div class="test" id="id1" style="cursor: pointer;">
 		All styles without title
 	</div>
@@ -441,6 +440,7 @@
       <div ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
       <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
       <div ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
+      <div ot="Hi" ot-show-effect-duration="1" ot-hide-effect-duration="1" ot-show-effect="rotate" ot-hide-effect="rotate" ot-fallback-show-effect="appear" ot-fallback-hide-effect="fade">Testing fallback effects. Should appear/fade with CSS3 disabled.</div>
 	</div>
     
 
