Stems with canvas now also work in IE.

--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js"></script>
 
 	<script type="text/javascript" src="../opentip.js"></script>
+    <!--[if lt IE9]><script src="../excanvas.js"></script><![endif]-->
 	<script type="text/javascript">
 //        Opentip.useCss3Transitions = false;
 //        Opentip.useScriptaculousTransitions = true;
