Drawing close button & stems works in all browsers except ie8 now.

--- a/test/index.html
+++ b/test/index.html
@@ -39,6 +39,7 @@
 
 	<script type="text/javascript" src="../opentip.js"></script>
     <!--[if lt IE 9]><script src="../excanvas.js"></script><![endif]-->
+    <script src="../excanvas.js"></script>
 	<script type="text/javascript">
 //        Opentip.useCss3Transitions = false;
 //        Opentip.useScriptaculousTransitions = true;
