--- a/test/index.html
+++ b/test/index.html
@@ -34,8 +34,8 @@
 		
 	</style>
 
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js"></script>
+	<script type="text/javascript" src="./prototype-1.7.0.0.js"></script>
+	<script type="text/javascript" src="scriptaculous-1.9.0/scriptaculous.js"></script>
 
 	<script type="text/javascript" src="../opentip.js"></script>
     <!--[if lt IE 9]><script src="../excanvas.js"></script><![endif]-->
