--- a/test/index.html
+++ b/test/index.html
@@ -485,14 +485,14 @@
     </div>
 
     <script type="text/javascript">
-    $('mtrigger').addTip('You could mouseover here to read this text and mouseout than to hide or just forget and mouseout the trigger to hide in a second.', 'Title', {
+    $('mtrigger').addTip('Tooltip disappears when you either click the trigger element or mouseout the tooltip', 'Title', {
         fixed: true,
         stem: true,
         tipJoint: [ 'left', 'middle' ],
         target: true,
         hideTrigger: ['tip', 'trigger'],
-        hideDelay: 1,
-        hideOn: 'mouseout',
+        hideDelay: 0.2,
+        hideOn: [ 'mouseout', 'click' ]
     });
     </script>
 
