Changed ot='' to data-ot=''

--- a/test/index.html
+++ b/test/index.html
@@ -447,11 +447,11 @@
 
 	<br />
 	<div class="test">
-      <div ot="Hi this is a very simple tooltip.">Just defining ot.</div>
-      <div ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
-      <a href="ajaxtest.html" ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
-      <div ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
-      <div ot="Hi" ot-show-effect-duration="1" ot-hide-effect-duration="1" ot-show-effect="rotate" ot-hide-effect="rotate" ot-fallback-show-effect="appear" ot-fallback-hide-effect="fade">Testing fallback effects. Should appear/fade with CSS3 disabled.</div>
+      <div data-ot="Hi this is a very simple tooltip.">Just defining ot.</div>
+      <div data-ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
+      <a href="ajaxtest.html" data-ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
+      <div data-ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
+      <div data-ot="Hi" ot-show-effect-duration="1" ot-hide-effect-duration="1" ot-show-effect="rotate" ot-hide-effect="rotate" ot-fallback-show-effect="appear" ot-fallback-hide-effect="fade">Testing fallback effects. Should appear/fade with CSS3 disabled.</div>
 	</div>
 
 
