Fixed the ot-bla bug.

--- a/test/index.html
+++ b/test/index.html
@@ -448,10 +448,10 @@
 	<br />
 	<div class="test">
       <div data-ot="Hi this is a very simple tooltip.">Just defining ot.</div>
-      <div data-ot="Hi" ot-delay="0.99" ot-style="glass">Delay 0.99, style glass.</div>
-      <a href="ajaxtest.html" data-ot="true" ot-show-on="click" ot-ajax="true" ot-stem="true" ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
-      <div data-ot="Hi" ot-show-effect="condense" ot-hide-effect="puff">Testing the inline HTML options.</div>
-      <div data-ot="Hi" ot-show-effect-duration="1" ot-hide-effect-duration="1" ot-show-effect="rotate" ot-hide-effect="rotate" ot-fallback-show-effect="appear" ot-fallback-hide-effect="fade">Testing fallback effects. Should appear/fade with CSS3 disabled.</div>
+      <div data-ot="Hi" data-ot-delay="0.99" data-ot-style="glass">Delay 0.99, style glass.</div>
+      <a href="ajaxtest.html" data-ot="true" data-ot-show-on="click" data-ot-ajax="true" data-ot-stem="true" data-ot-tip-joint="[ 'center', 'bottom' ]">Testing AJAX. tip joint: center/bottom</a>
+      <div data-ot="Hi" data-ot-show-effect="condense" data-ot-hide-effect="puff">Testing the inline HTML options.</div>
+      <div data-ot="Hi" data-ot-show-effect-duration="1" data-ot-hide-effect-duration="1" data-ot-show-effect="rotate" data-ot-hide-effect="rotate" data-ot-fallback-show-effect="appear" data-ot-fallback-hide-effect="fade">Testing fallback effects. Should appear/fade with CSS3 disabled.</div>
 	</div>
 
 
