Fixed the home site AJAX loading.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ title: The free tooltip
             Tips.add('stemDemo', 'cool', { stem: [ 'right', 'top' ], stemSize: 4, tipJoint: [ 'right', 'top' ] });
           </script>
 
-          <div class="demo" onmouseover="javascript:Tips.add(this, event, { ajax: { url: 'ajaxDemo.php' }});">
+          <div class="demo" onmouseover="javascript:Tips.add(this, event, { ajax: { url: 'ajax-demo.html' }});">
             <div class="title">AJAX</div>
             <div class="description">
               By adding one option, your opentip automatically downloads content with Ajax.
