Added tests for the native adapter.

--- a/test/index.html
+++ b/test/index.html
@@ -10,16 +10,17 @@
   <script>mocha.setup("bdd")</script>
   <script src="../lib/opentip.js"></script>
   
-  <!--
   <script src="lib/ender.js"></script>
   <script>ender.noConflict();</script>
+  <!--
   <script src="../lib/adapter.ender.js"></script>
   -->
 
-  <script src="../lib/adapter.example.js"></script>
+  <script src="../lib/adapter.native.js"></script>
 
   <script src="tests/Opentip.js"></script>
   <script src="tests/utils.js"></script>
+  <script src="tests/adapter.native.js"></script>
   <script>
     jQuery(function(){
       mocha
