Added ender and native adapters.

--- a/test/index.html
+++ b/test/index.html
@@ -12,15 +12,15 @@
   
   <script src="lib/ender.js"></script>
   <script>ender.noConflict();</script>
-  <!--
-  <script src="../lib/adapter.ender.js"></script>
-  -->
 
+  <script src="../lib/adapter.ender.js"></script>
   <script src="../lib/adapter.native.js"></script>
 
   <script src="tests/Opentip.js"></script>
   <script src="tests/utils.js"></script>
+  <script src="tests/adapters.js"></script>
   <script src="tests/adapter.native.js"></script>
+  <script src="tests/adapter.ender.js"></script>
   <script>
     jQuery(function(){
       mocha
