Added a test that AJAX is disabled when no url is provided.

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
   <script src="../lib/adapter.ender.js"></script>
   <script src="../lib/adapter.native.js"></script>
 
-  <script src="tests/Opentip.js"></script>
+  <script src="tests/opentip.js"></script>
   <script src="tests/utils.js"></script>
   <script src="tests/adapters.js"></script>
   <script src="tests/adapter.native.js"></script>
