--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
   <script src="../lib/adapter.native.js"></script>
 
   <script src="tests/opentip.js"></script>
+  <script src="tests/opentip.show.js"></script>
   <script src="tests/utils.js"></script>
   <script src="tests/adapters.js"></script>
   <script src="tests/adapter.native.js"></script>
