Added information about the next version.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@ title: The free tooltip
         <br />
         <h2>Other</h2>
         <p>
-          I'm currently rewriting Opentip to use <a href="http://ender.no.de/">Ender</a>. I'll be maintaining the prototype version as well but new features will go to the ender version.
+
+          I'm currently rewriting Opentip to use adapters which enables it to
+          work with <a href="http://jquery.com">jQuery</a>, <a href="http://ender.no.de/">Ender</a>, 
+          <a href="http://prototypejs.org">Prototype</a>, and pretty much every other framework
+          I write adapters for (which is pretty easy).
+          <br />
+          Check out my work at <a href="https://github.com/enyo/opentip/tree/coffeescript">Github</a>.
+          <br />
+          This is going to be a major release (v2.0) so it won't be fully backwards compatible.
+
+
         </p>
         <p>
           You might also be interested in another project of mine: <a href="http://www.formwatcher.org/">www.formwatcher.org</a>.
