Added dropzonejs as reference.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@ title: The free tooltip
 
         </p>
         <p>
-          You might also be interested in another project of mine: <a href="http://www.formwatcher.org/">www.formwatcher.org</a>.
+          You might also be interested in other projects of mine:
+          <a href="http://www.formwatcher.org/">www.formwatcher.org</a>,
+          <a href="http://www.dropzonejs.com/">www.dropzonejs.com</a>.
         </p>
       </div>
 
