Added a basic .styl file.

--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,10 @@
         .run()
     })
   </script>
+  <style type="text/css">
+    /* So it doesn't flash when it's appended to the body. */
+    .opentip-container { display: none; }
+  </style>
 </head>
 <body>
 
