--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -8,6 +8,9 @@
   <script>
     Opentip.debug = true;
   </script>
+  <style type="text/css">
+    @import url("../css/opentip.css");
+  </style>
 </head>
 <body>
 
