Positioning of the tooltip works now\!

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
 
   <script src="tests/opentip.js"></script>
   <script src="tests/opentip.show.js"></script>
+  <script src="tests/opentip.positioning.js"></script>
   <script src="tests/utils.js"></script>
   <script src="tests/adapters.js"></script>
   <script src="tests/adapter.native.js"></script>
