--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -10,6 +10,15 @@
   </script>
   <style type="text/css">
     @import url("../css/opentip.css");
+
+    .opentip-test {
+      width: 150px;
+      background: #f4f4f4;
+      padding: 10px;
+      text-align: center;
+      position: relative;
+      margin: 40px auto;
+    }
   </style>
 </head>
 <body>
