Trying to refine the positioning algorithm.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -8,8 +8,8 @@
   <script>
     Opentip.debug = true;
     $.domReady(function() {
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top", stem: true, stemLength: 5})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top right", stem: true, stemLength: 5})
+      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top", stem: true, stemLength: 5, borderWidth: 20 })
+      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top right", stem: true, stemLength: 5, borderWidth: 15})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "right", stem: true, stemLength: 5})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom right", stem: true, stemLength: 5})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom", stem: true, stemLength: 5})
