--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -17,6 +17,7 @@
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom left", stem: true, stemLength: 5, showOn: "creation"})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "left", stem: true, stemLength: 5, showOn: "creation"})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top left", stem: true, stemLength: 5, showOn: "creation"})
+      window.x=$(".opentip-test").opentip("Hallo test", { tipJoint: "bottom left", stem: true, stemLength: 2, stemBase: 30, showOn: "creation"})
     });
   </script>
   <style type="text/css">
