Added a dark style.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -17,7 +17,8 @@
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom left", stem: true, stemLength: 5, showOn: "creation"})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "left", stem: true, stemLength: 5, showOn: "creation"})
       window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top left", stem: true, stemLength: 5, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { tipJoint: "bottom left", stem: true, stemLength: 2, stemBase: 30, showOn: "creation"})
+
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", tipJoint: "left", stem: true, stemLength: 7, stemBase: 12, borderWidth: 2, borderRadius:13, showOn: "creation"})
     });
   </script>
   <style type="text/css">
