--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -8,17 +8,29 @@
   <script>
     Opentip.debug = true;
     $.domReady(function() {
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top", stem: true, stemLength: 5, borderWidth: 1, showOn: "creation" })
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top right", stem: true, stemLength: 5, borderWidth: 1, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "right", stem: true, stemLength: 5, borderWidth: 1, showOn: "creation" })
-      // window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", stem: true, stemLength: 20, borderWidth: 0, showOn: "creation" })
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom right", stem: true, stemLength: 5, borderWidth: 1, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom", stem: true, stemLength: 5, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "bottom left", stem: true, stemLength: 5, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "left", stem: true, stemLength: 5, showOn: "creation"})
-      window.x=$(".opentip-test").opentip("Hallo test", { target: true, tipJoint: "top left", stem: true, stemLength: 5, showOn: "creation"})
 
-      window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", tipJoint: "left", stem: true, stemLength: 7, stemBase: 12, borderWidth: 2, borderRadius:13, showOn: "creation"})
+      Opentip.styles.test = {
+        target: true,
+        stem: true,
+        stemLength: 5,
+        borderWidth: 1,
+        showOn: "creation",
+        hideOn: "click"
+      }
+
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "top" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "top right" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "right"  })
+      // window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", borderWidth: 0  })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "bottom right" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "bottom" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "bottom left" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "left" })
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "top left" })
+
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", tipJoint: "left", stem: true, stemLength: 7, stemBase: 12, borderWidth: 2, borderRadius:13})
+
+      window.x=$(".opentip-test2").opentip("Hallo test", { target: true, delay: 0, showEffect: false, hideDelay: 0, hideEffectDuration: 3 })
     });
   </script>
   <style type="text/css">
