--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -28,7 +28,7 @@
       window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "left" })
       window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "top left" })
 
-      window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", tipJoint: "left", stem: true, stemLength: 7, stemBase: 12, borderWidth: 2, borderRadius:13})
+      window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", hideDelay: 0.5, tipJoint: "left", stem: true, stemLength: 7, stemBase: 12, borderWidth: 2, borderRadius:13})
 
       window.x=$(".opentip-test2").opentip("Hallo test", { target: true, delay: 0, showEffect: false, hideDelay: 0, hideEffectDuration: 3 })
     });
