--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -15,7 +15,8 @@
         stemLength: 5,
         borderWidth: 1,
         showOn: "creation",
-        hideOn: "click"
+        // hideOn: "click"
+        hideTrigger: "closeButton"
       }
 
       window.x=$(".opentip-test").opentip("Hallo test", { style: "test", tipJoint: "top" })
@@ -31,6 +32,8 @@
       window.x=$(".opentip-test").opentip("Hallo test", { style: "dark", hideDelay: 0.5, tipJoint: "left", stem: true, borderWidth: 2})
 
       window.x=$(".opentip-test2").opentip("Hallo test", { style: "dark", stem: true, target: true, delay: 0, showEffect: false, hideDelay: 0, hideEffectDuration: 3 })
+
+      window.x=$(".opentip-test2").opentip("Hallo test bla test bl<br />kjsdlfksjdlf", { style: "dark", hideTrigger: "closeButton", stem: true, tipJoint: "top right", target: true, delay: 0, hideDelay: 0, showOn: "creation", borderRadius: 15 })
     });
   </script>
   <style type="text/css">
