First steps in implementing a free to configure close button.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -16,7 +16,9 @@
         borderWidth: 1,
         showOn: "creation",
         // hideOn: "click"
-        hideTrigger: "closeButton"
+        hideTrigger: "closeButton",
+        closeButtonRadius: 10,
+        closeButtonOffset: [ 0, 10 ]
       }
       // window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", borderWidth: 0  })
 
