Close buttons are properly drawn now.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -17,8 +17,8 @@
         showOn: "creation",
         // hideOn: "click"
         hideTrigger: "closeButton",
-        closeButtonRadius: 10,
-        closeButtonOffset: [ 0, 10 ]
+        // closeButtonRadius: 8,
+        // closeButtonOffset: [ 5, 5 ]
       }
       // window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", borderWidth: 0  })
 
@@ -53,7 +53,14 @@
     .opentip-container .opentip {
       padding: 10px 15px;
     }
-  </style>
+/*    canvas {
+      background: rgba(255, 0, 0, 0.1);
+    }
+*/  
+/*    a.close {
+      background: rgba(255, 0,0,0.2);
+    }
+*/  </style>
 </head>
 <body>
 
