Renamed a few variables.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -17,8 +17,10 @@
         showOn: "creation",
         // hideOn: "click"
         hideTrigger: "closeButton",
-        // closeButtonRadius: 8,
-        // closeButtonOffset: [ 5, 5 ]
+        // closeButtonRadius: 10,
+        // closeButtonOffset: [ 10, 2 ],
+        // closeButtonCrossLineWidth: 2.4,
+        // closeButtonCrossSize: 5
       }
       // window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", borderWidth: 0  })
 
