Added tests for the close button positioning.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -12,13 +12,13 @@
       Opentip.styles.test = {
         target: true,
         stem: true,
-        stemLength: 5,
-        borderWidth: 1,
+        // stemLength: 6,
+        // borderWidth: 1,
         showOn: "creation",
         // hideOn: "click"
         hideTrigger: "closeButton",
-        // closeButtonRadius: 10,
-        // closeButtonOffset: [ 10, 2 ],
+        // closeButtonRadius: 7,
+        // closeButtonOffset: [ -5, 0 ],
         // closeButtonCrossLineWidth: 2.4,
         // closeButtonCrossSize: 5
       }
@@ -62,7 +62,9 @@
 /*    a.close {
       background: rgba(255, 0,0,0.2);
     }
-*/  </style>
+*/  
+
+  </style>
 </head>
 <body>
 
