Added startup. NOT WORKING

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
   <script src="../lib/adapter.native.js"></script>
 
   <script src="tests/opentip.js"></script>
+  <script src="tests/opentip.startup.js"></script>
   <script src="tests/opentip.show.js"></script>
   <script src="tests/opentip.positioning.js"></script>
   <script src="tests/opentip.draw.js"></script>
