Opentip finds the elements now and creates opentips at startup.

--- a/test/opentip-test.html
+++ b/test/opentip-test.html
@@ -70,7 +70,7 @@
 
   <div id="mocha">
     <div class="opentip-test" data-ot="test">Hello</div>
-    <div class="opentip-test2" data-ot="test">Hello</div>
+    <div class="opentip-test2" data-ot="test" data-ot-hide-trigger="closeButton" data-ot-target="true" data-ot-tip-joint="top">Hello</div>
   </div>
 
 </body>
