Started creating the jQuery adapter. Not yet finished.

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 
   <script src="../lib/adapter.ender.js"></script>
   <script src="../lib/adapter.native.js"></script>
+  <script src="../lib/adapter.jquery.js"></script>
 
   <script src="tests/opentip.js"></script>
   <script src="tests/opentip.startup.js"></script>
